# chess-telex-ai-agent-test

./: Dockerfile  main.py  pyproject.toml  requirements.txt
agents/: chess_agent.py
